objects/nCHECK__Grading_Exercise__mdt.object
<CustomObject>
    <description>Top-level Metadata for the Grading component. Children records are steps inside this exercise.</description>
    <fields>
        <fullName>nCHECK__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nCHECK__Curriculum__c</fullName>
        <label>Curriculum</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial 201</fullName>
                    <default>true</default>
                    <label>Commercial 201</label>
                </value>
                <value>
                    <fullName>Commercial 301</fullName>
                </value>
                <value>
                    <fullName>Retail 201</fullName>
                </value>
                <value>
                    <fullName>Retail 301</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nCHECK__Grading_Course__c</fullName>
        <label>Grading Course</label>
        <referenceTo>nCHECK__Grading_Course__mdt</referenceTo>
        <relationshipLabel>Grading Exercises</relationshipLabel>
        <relationshipName>Grading_Exercises</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>nCHECK__Step__c</fullName>
        <label>Step</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nCHECK__Title__c</fullName>
        <description>Title of the exercise</description>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Grading Exercise</label>
    <listViews>
        <fullName>nCHECK__ALL</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>nCHECK__Active__c</columns>
        <columns>nCHECK__Grading_Course__c</columns>
        <columns>nCHECK__Curriculum__c</columns>
        <filterScope>Everything</filterScope>
        <label>ALL</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>nCHECK__Commercial_301_Exercises</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>nCHECK__Title__c</columns>
        <columns>nCHECK__Curriculum__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>nCHECK__Curriculum__c</field>
            <operation>equals</operation>
            <value>Commercial 301</value>
        </filters>
        <label>Commercial 301 Exercises</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Grading Exercises</pluralLabel>
</CustomObject>